Closed Bug 1896402 Opened 5 months ago Closed 5 months ago

The coordinate of click event in parent process might be incorrect

Categories

(Core :: DOM: Events, defect)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox128 --- fixed

People

(Reporter: edgar, Assigned: edgar)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The click event is generated from mouse up event in https://searchfox.org/mozilla-central/rev/ee2ad260c25310a9fbf96031de05bbc0e94394cc/dom/events/EventStateManager.cpp#3855. It happens after the mouseup event has been dispatched to the content process, which transforms the coordinate to the content process's coordinate space. So we end up using transformed coordinate to generate click event in parent process.

to avoid using the transformed coordinate in parent process after the event has
been dispatched to the child process, e.g. when generating a click event.

Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/655dec90c7a2 Restore the coordinate after the event has been dispatched to the child process; r=smaug
Regressions: 1896721
Status: NEW → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: