Bug 1896402 - Restore the coordinate after the event has been dispatched to the child process; r=smaug

to avoid using the transformed coordinate in parent process after the event has
been dispatched to the child process, e.g. when generating a click event.

Differential Revision: https://phabricator.services.mozilla.com/D210226